--- a/src/GameInDots.css
+++ b/src/GameInDots.css
@@ -1,4 +1,4 @@
-.gameInDots {
+.game-in-dots {
   font-family: Arial, sans-serif;
   font-size: 10px;
   width: 100%;
@@ -8,80 +8,49 @@
   text-align: center;
   flex-direction: row;
   justify-content: center;
-  align-items: center
+  align-items: center;
+  margin: 0 auto;
 }
 
-.header{
-  width: 100%;
-  border-bottom: 2px solid grey;
+.left-part-game {
+  width: 50%;
+  display: flex;
   text-align: center;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
 }
 
-.header_title {
-  font-size: 12px;
-}
-
-.form-body {
-  padding: 20px;
+.form-body{
+  display: flex;
+  text-align: center;
+  flex-direction: row;
+  justify-content: space-between;
+  align-items: center;
 }
 
 .box {
-  padding-bottom: 20px;
+  margin: 20px;
 }
 
-.box-title {
-  margin-bottom: 10px;
-  font-size: 12px;
+span {
+  height: 40px;
 }
 
-.projects-title-box {
-  width: 100%;
-  display: flex;
-  flex-direction: row;
-  justify-content: flex-start;
-  align-items: center
+.game-mode-input-box {
+  width: 120px
 }
 
-.project-title-box {
-  margin-right: 20px;
-  border: 2px solid grey;
-  width: 100px;
-  display: flex;
-  text-align: center;
-  flex-direction: row;
-  justify-content: center;
-  align-items: center
-}
-
-.project_title_text {
-  margin: 5px;
-}
-
-.project-box{
-  border: 2px dotted grey;
-  margin-bottom: 10px;
-}
-
-.project-item {
-  width: 100%;
-  display: flex;
-  text-align: center;
-  flex-direction: row;
-  justify-content: flex-start;
-  align-items: center
-}
-
-.project-item-tittle {
-   width: 100px;
-   margin: 10px 20px 10px 0;
+.box {
+   width: 150px;
+   height: 22px;
  }
 
-.project-item-value {
-  margin: 10px;
+.box select {
+  width: 150px;
+  height: 22px;
 }
 
-.delete-project{
-  cursor: pointer;
+.submit-button-box button {
+  width: 120px;
 }
-
-
